Added links to github repositories

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 <a href="https://evanairlines.azurewebsites.net" class="btn btn-primary">
                   Click here to visit
                 </a>
+                <br><br>
+                <a href="https://github.com/EvantheCritic/evanairlines" class="btn btn-primary">
+                  Click here to see Github repository
+                </a>
               </div>
           </div>
         </div>
@@ -79,6 +83,10 @@
                     <a href="https://evanthecritic.github.io/Mafia/" class="btn btn-primary">
                       Click here to visit
                     </a>
+                    <br><br>
+                    <a href="https://github.com/EvantheCritic/Mafia" class="btn btn-primary">
+                      Click here to see Github repository
+                    </a>
                   </div>
                 </div>
                 <div class="col d-flex align-items-start">
@@ -95,6 +103,10 @@
                     <a href="https://evanthecritic.github.io/Rhythm-Train/" class="btn btn-primary">
                       Click here to visit
                     </a>
+                    <br><br>
+                    <a href="https://github.com/EvantheCritic/Rhythm-Train" class="btn btn-primary">
+                      Click here to see Github repository
+                    </a>
                   </div>
                 </div>
                 <div class="col d-flex align-items-start">
@@ -110,6 +122,10 @@
                     </ul>
                     <a href="https://evanthecritic.github.io/Sketch-n-Save/" class="btn btn-primary">
                       Click here to visit
+                    </a>
+                    <br><br>
+                    <a href="https://github.com/EvantheCritic/Sketch-n-Save" class="btn btn-primary">
+                      Click here to see Github repository
                     </a>
                   </div>
                 </div>
