Added Walker Johnson

--- a/index.html
+++ b/index.html
@@ -61,6 +61,23 @@
                 </a>
               </div>
           </div>
+          <div class="col d-flex align-items-start">
+            <div>
+              <img src="wj-img.png" alt="Walker Johnson" width="400">
+              <h3 class="fs-2 text-body-emphasis">Walker Johnson Brewing</h3>
+              <p>Come visit the restaurant and brewery that was thought of by myself and my best friend</p>
+              <ul>
+                <li><strong>React.js/Node.js Framework: </strong>Developed a full-stack web application using React.js for the client-side and Node.js for the server-side.</li>
+                <li><strong>HTML/CSS/JavaScript: </strong>Implemented responsive and visually appealing user interfaces with HTML, CSS, and JavaScript.</li>
+                <li><strong>RESTful API Integration: </strong>Designed and integrated RESTful APIs for communication between client-side and server-side components with axios, allowing for efficient data exchange.</li>
+                <li><strong>MySQL Database Integration: </strong>Used MySQL database into the backend using Node.js, enabling efficient data storage and retrieval through SQL queries.</li>
+                <li><strong>Authentication and Authorization: </strong>Deployed both a front-end and back-end application to Heroku, and leveraged cost-efficient resources for both applications.</li>
+              </ul>
+              <a href="https://walkerjohnsonbrewing-client-6bcd96742101.herokuapp.com/" class="btn btn-primary">
+                Click here to visit
+              </a>
+              <br><br>
+            </div>
         </div>
         <!-- Closing div for the first website -->
       </div>
