--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>Evan's Portfolio</title>
+      <title>Portfolio of Evan Johnson</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </head>
@@ -20,11 +20,10 @@
           <div class="p-5 text-center custom-azure-bg mb-5">
             <div class="container py-5">
               <img src="evan.jpg" alt="Evan" height="144" style="border-radius: 50%">
-              <h1 class="text-body-emphasis" style="font-size: 4.2rem">Evan's Portfolio</h1>
+              <h1 class="text-body-emphasis" style="font-size: 4.2rem">Portfolio of Evan Johnson</h1>
               <p class="col-lg-8 mx-auto lead" style="font-size: 1.6rem">
                 Welcome to my portfolio! As a passionate software developer, 
-                I am delighted to showcase my skills I have taught myself about web development. 
-                I have successfully crafted a full-stack web application, demonstrating my 
+                I am delighted to showcase my skills. I have successfully crafted a full-stack web application, demonstrating my 
                 proficiency in both front-end and back-end development. Additionally, I've 
                 designed three client-side JavaScript applications that 
                 showcase my creativity and ability to deliver a fun experience to the user. 
@@ -35,52 +34,61 @@
             </div>
           </div>
         </div>
-        <div class="container px-4 py-5" id="hanging-icons">
-          <h2 class="pb-2 border-bottom">Full Stack Websites</h2>
-          <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-            <div class="col d-flex align-items-start">
-              <div>
-                <img src="ea-img.png" alt="Evan Airlines" width="156">
-                <h3 class="fs-2 text-body-emphasis">Evan Airlines</h3>
-                <p>Get ready to take off with Evan's imaginary airlines business</p>
-                <ul>
-                  <li><strong>ASP.NET Core Framework: </strong>Developed a full-stack web application using the ASP.NET Core framework, using the power of a modern and cross-platform framework for web development.</li>
-                  <li><strong>Back-End Development: </strong>Implemented efficient server-side logic using C#, ensuring optimal performance in handling server-side operations.</li>
-                  <li><strong>RESTful API Integration: </strong>Designed and integrated RESTful APIs for communication between client-side and server-side components, allowing for efficient data exchange.</li>
-                  <li><strong>Database Integration: </strong>Leveraged ASP.NET Core's Entity Framework dependency, implementing a reliable database structure to store and retrieve data for the application.</li>
-                  <li><strong>Authentication and Authorization: </strong>Implemented authentication and authorization mechanisms using ASP.NET Core's Identity Framework dependency, ensuring secure user access and protecting sensitive information, as well as implementing an SMTP client for password restoration.</li>
-                  <li><strong>MVC Architecture: </strong>Implemented a clean and maintainable code structure using the Model-View-Controller (MVC) architectural pattern, utilizing razor variables for embedded C# code in the project's views.</li>
-                  <li><strong>Cloud Deployment with Microsoft Azure: </strong>Deployed the ASP.NET Core web application to Microsoft Azure, taking advantage of cloud services to enhance performance, reliability, and accessibility.</li>
-                </ul>
-                <a href="https://evanairlines.azurewebsites.net" class="btn btn-primary">
-                  Click here to visit
-                </a>
-                <br><br>
-                <a href="https://github.com/EvantheCritic/evanairlines" class="btn btn-primary">
-                  Click here to see Github repository
-                </a>
+        <div class="container my-5">
+          <h2 class="pb-2 border-bottom text-center">Full Stack Websites</h2><br>
+          <div class="p-5 text-center bg-body-tertiary rounded-3">
+            <img src="ea-img.png" alt="Evan Airlines" width="156">
+            <h1 class="text-body-emphasis">Evan Airlines</h1>
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content rounded-4 shadow" style="padding: 20px;">
+                  <div class="modal-header border-bottom-0">
+                    <h1 class="modal-title fs-5" style="text-align: left;">Get ready to take off with Evan's imaginary airlines business</h1><br>
+                  </div>
+                  <div class="modal-body py-0" style="text-align: left;">
+                      <ul>
+                          <li><strong>ASP.NET Core Framework:</strong> Developed a full-stack web application using the ASP.NET Core framework, using the power of a modern and cross-platform framework for web development.</li>
+                          <li><strong>Back-End Development:</strong> Implemented efficient server-side logic using C#, ensuring optimal performance in handling server-side operations.</li>
+                          <li><strong>RESTful API Integration:</strong> Designed and integrated RESTful APIs for communication between client-side and server-side components, allowing for efficient data exchange.</li>
+                          <li><strong>Database Integration:</strong> Leveraged ASP.NET Core's Entity Framework dependency, implementing a reliable database structure to store and retrieve data for the application.</li>
+                          <li><strong>Authentication and Authorization:</strong> Implemented authentication and authorization mechanisms using ASP.NET Core's Identity Framework dependency, ensuring secure user access and protecting sensitive information, as well as implementing an SMTP client for password restoration.</li>
+                          <li><strong>MVC Architecture:</strong> Implemented a clean and maintainable code structure using the Model-View-Controller (MVC) architectural pattern, utilizing razor variables for embedded C# code in the project's views.</li>
+                          <li><strong>Cloud Deployment with Microsoft Azure:</strong> Deployed the ASP.NET Core web application to Microsoft Azure, taking advantage of cloud services to enhance performance, reliability, and accessibility.</li>
+                      </ul>
+                  </div>
+                  <div class="modal-footer flex-column align-items-stretch w-100 gap-2 pb-3 border-top-0">
+                      <a href="https://evanairlines.azurewebsites.net" class="btn btn-lg btn-primary" target="_blank">Click here to visit</a>
+                      <a href="https://github.com/EvantheCritic/evanairlines" class="btn btn-lg btn-secondary" target="_blank">Click here to see Github Repository</a>
+                  </div>
               </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <div>
-              <img src="wj-img.png" alt="Walker Johnson" width="400">
-              <h3 class="fs-2 text-body-emphasis">Walker Johnson Brewing</h3>
-              <p>Come visit the restaurant and brewery that was thought of by myself and my best friend</p>
-              <ul>
-                <li><strong>React.js/Node.js Framework: </strong>Developed a full-stack web application using React.js for the client-side and Node.js for the server-side.</li>
-                <li><strong>HTML/CSS/JavaScript: </strong>Implemented responsive and visually appealing user interfaces with HTML, CSS, and JavaScript.</li>
-                <li><strong>RESTful API Integration: </strong>Designed and integrated RESTful APIs for communication between client-side and server-side components with axios, allowing for efficient data exchange.</li>
-                <li><strong>MySQL Database Integration: </strong>Used MySQL database into the backend using Node.js, enabling efficient data storage and retrieval through SQL queries.</li>
-                <li><strong>Authentication and Authorization: </strong>Deployed both a front-end and back-end application to Heroku, and leveraged cost-efficient resources for both applications.</li>
-              </ul>
-              <a href="https://walkerjohnsonbrewing-client-6bcd96742101.herokuapp.com/" class="btn btn-primary">
-                Click here to visit
-              </a>
-              <br><br>
             </div>
+          </div>
         </div>
-        <!-- Closing div for the first website -->
-      </div>
+        <div class="container my-5">
+          <div class="p-5 text-center bg-body-tertiary rounded-3">
+            <img src="wj-img.png" alt="Walker Johnson" height="156">
+            <h1 class="text-body-emphasis">Walker Johnson Brewing</h1>
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content rounded-4 shadow" style="padding: 20px;">
+                  <div class="modal-header border-bottom-0">
+                    <h1 class="modal-title fs-5" style="text-align: left;">Come visit the restaurant and brewery that was thought of by myself and my best friend</h1><br>
+                  </div>
+                  <div class="modal-body py-0" style="text-align: left;">
+                    <ul>
+                      <li><strong>React.js/Node.js Framework: </strong>Developed a full-stack web application using React.js for the client-side and Node.js for the server-side.</li>
+                      <li><strong>HTML/CSS/JavaScript: </strong>Implemented responsive and visually appealing user interfaces with HTML, CSS, and JavaScript.</li>
+                      <li><strong>RESTful API Integration: </strong>Designed and integrated RESTful APIs for communication between client-side and server-side components with axios, allowing for efficient data exchange.</li>
+                      <li><strong>MySQL Database Integration: </strong>Used MySQL database into the backend using Node.js, enabling efficient data storage and retrieval through SQL queries.</li>
+                      <li><strong>Authentication and Authorization: </strong>Deployed both a front-end and back-end application to Heroku, and leveraged cost-efficient resources for both applications.</li>
+                    </ul>
+                  </div>
+                  <div class="modal-footer flex-column align-items-stretch w-100 gap-2 pb-3 border-top-0">
+                      <a href="https://walkerjohnsonbrewing-client-6bcd96742101.herokuapp.com/" class="btn btn-lg btn-primary" target="_blank">Click here to visit</a>
+                      <a href="https://github.com/EvantheCritic/evanairlines" class="btn btn-lg btn-secondary" target="_blank">Click here to see Github Repository</a>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
           <div class="container px-4 py-5" id="hanging-icons">
               <h2 class="pb-2 border-bottom">JavaScript applications</h2>
               <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
