Some text changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="p-5 text-center custom-azure-bg mb-5">
             <div class="container py-5">
               <img src="evan.jpg" alt="Evan" height="144" style="border-radius: 50%">
-              <h1 class="text-body-emphasis" style="font-size: 4.2rem">Portfolio of Evan Johnson</h1>
+              <h1 class="text-body-emphasis" style="font-size: 4.2rem">Evan Johnson</h1>
               <p class="col-lg-8 mx-auto lead" style="font-size: 1.6rem">
                 Welcome to my portfolio! As a passionate software developer, 
                 I am delighted to showcase my skills. I have successfully crafted a full-stack web application, demonstrating my 
@@ -78,7 +78,7 @@
                       <li><strong>HTML/CSS/JavaScript: </strong>Implemented responsive and visually appealing user interfaces with HTML, CSS, and JavaScript.</li>
                       <li><strong>RESTful API Integration: </strong>Designed and integrated RESTful APIs for communication between client-side and server-side components with axios, allowing for efficient data exchange.</li>
                       <li><strong>MySQL Database Integration: </strong>Used MySQL database into the backend using Node.js, enabling efficient data storage and retrieval through SQL queries.</li>
-                      <li><strong>Authentication and Authorization: </strong>Deployed both a front-end and back-end application to Heroku, and leveraged cost-efficient resources for both applications.</li>
+                      <li><strong>Deployment to Heroku Cloud: </strong>Deployed both a front-end and back-end application to Heroku, and leveraged cost-efficient resources for both applications.</li>
                     </ul>
                   </div>
                   <div class="modal-footer flex-column align-items-stretch w-100 gap-2 pb-3 border-top-0">
