Small change in introductory passage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <h1 class="text-body-emphasis" style="font-size: 4.2rem">Evan Johnson</h1>
               <p class="col-lg-8 mx-auto lead" style="font-size: 1.6rem">
                 Welcome to my portfolio! As a passionate software developer, 
-                I am delighted to showcase my skills. I have successfully crafted a full-stack web application, demonstrating my 
+                I am delighted to showcase my skills. I have successfully crafted two full-stack web applications, demonstrating my 
                 proficiency in both front-end and back-end development. Additionally, I've 
                 designed three client-side JavaScript applications that 
                 showcase my creativity and ability to deliver a fun experience to the user. 
